--- a/src/components/TrendingList/TrendingCard/styles/trending_card.css
+++ b/src/components/TrendingList/TrendingCard/styles/trending_card.css
@@ -259,8 +259,8 @@
     line-height: 142.857%;
   }
   .trending-card .card-lower-container .lower-content .shop-btn {
-    width: 146px;
-    height: 44px;
+    width: clamp(85px, 8.8536vw, 340px);
+    height: clamp(22px, 2.29152vw, 88px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -292,7 +292,7 @@
     color: #FFF;
     text-align: right;
     font-family: Lato;
-    font-size: clamp(10px, 1.0416vw, 40px);
+    font-size: clamp(8px, 0.83328vw, 32px);
     font-style: normal;
     font-weight: 600;
     line-height: 142.857%;
