--- a/src/components/TrendingList/TrendingCard/styles/trending_card.sass
+++ b/src/components/TrendingList/TrendingCard/styles/trending_card.sass
@@ -265,8 +265,8 @@
                         line-height: 142.857%
 
                 .shop-btn
-                    width: 146px
-                    height: 44px
+                    width: clamp(85px,8.8536vw,340px)
+                    height: clamp(22px,2.2915200000000002vw,88px)
                     display: flex
                     align-items: center
                     justify-content: center
@@ -278,7 +278,6 @@
                         background-color: $white
 
                         .btn-content
-
                             .price, .text
                                 color: $primary_gray
 
@@ -299,7 +298,7 @@
                             color: #FFF
                             text-align: right
                             font-family: Lato
-                            font-size: $font20
+                            font-size: $font16
                             font-style: normal
                             font-weight: 600
                             line-height: 142.857%
