--- a/src/components/TrendingList/styles/trending_list.css
+++ b/src/components/TrendingList/styles/trending_list.css
@@ -11,7 +11,7 @@
 }
 .trending-list .trending-swiper {
   width: 100%;
-  display: flex !important;
+  display: flex;
   align-items: center;
   margin-top: clamp(12px, 5.60736vw, 48px);
 }
