--- a/src/components/TrendingList/styles/trending_list.sass
+++ b/src/components/TrendingList/styles/trending_list.sass
@@ -12,7 +12,7 @@
 
     .trending-swiper
         width: 100%
-        display: flex !important
+        display: flex
         align-items: center
         margin-top: clamp(12px,5.60736vw,48px)
 
