--- a/src/styles/global/global.sass
+++ b/src/styles/global/global.sass
@@ -172,6 +172,9 @@
         .tablet-container, .tablet-top-list, .trending-list-tablet, .advertisment-row
             display: none
 
+        .advertisment-row-pc
+            display: none
+
 @media (min-width: 768px) and (max-width: 1024px)
 
     .tablet-container, .tablet-top-list, .trending-list-tablet, .advertisment-row
@@ -234,3 +237,6 @@
 
     .view
         font-size: $font16 !important
+
+    .advertisment-row
+        display: none !important
