--- a/src/components/Footer/styles/footer.sass
+++ b/src/components/Footer/styles/footer.sass
@@ -21,12 +21,18 @@
         justify-content: center
 
         .content-container
-            width: 47.07112970711297%
+            width: 87.07112970711297%
             display: flex
             align-items: center
             justify-content: space-between
             margin-top: $m16mob
             margin-bottom: $m32mob
+
+    .logotypes-pc
+        display: none
+
+    .footer-container-pc
+        display: none
 
     .row
         width: 100%
@@ -104,3 +110,135 @@
 
                 .help
                     margin-right: $m32tab
+
+        .footer-container-pc
+            display: none
+
+@media (min-width: 1024px)
+
+    .footer
+
+        .footer-container
+            display: none
+
+        .footer-container-pc
+            width: 61.736111111111114%
+            display: flex
+            align-items: center
+            justify-content: center
+            margin: auto !important
+            margin-top: $m64 !important
+            margin-bottom: $m64 !important
+
+            .columns
+                width: 100%
+                height: auto
+                display: flex
+                align-items: flex-start
+                justify-content: space-between
+                margin: auto !important
+
+                .column
+                    display: flex
+                    flex-direction: column
+
+                    .column-heading
+                        color: $primary_gray
+                        font-family: Lato
+                        font-size: $font20
+                        font-style: normal
+                        font-weight: 700
+                        line-height: 142.857%
+                        margin-bottom: $m16
+
+                    .link
+                        color: $secondary_text
+                        font-family: Lato
+                        font-size: $font18
+                        font-style: normal
+                        font-weight: 400
+                        line-height: 142.857%
+                        text-decoration: none
+                        margin-top: $m16
+
+    .logotypes-pc
+        width: 100%
+        height: auto
+        background-color: $white
+        display: flex !important
+        flex-direction: column
+
+        .logo-language
+            width: 86.11111111111111%
+            height: auto
+            display: flex
+            justify-content: space-between
+            align-items: center
+            margin: auto
+            margin-top: $m32
+
+            .logos
+                width: 13%
+                display: flex
+                flex-direction: row
+                align-items: center
+                justify-content: space-between
+
+                .logo
+                    width: auto
+                    height: auto
+
+            .language
+                display: flex
+                align-items: center
+
+                .text
+                    color: $primary_gray
+                    text-align: right
+                    font-family: Lato
+                    font-size: $font16
+                    font-style: normal
+                    font-weight: 400
+                    line-height: 142.857%
+                    margin-right: $m8
+
+                .chevron
+                    font-size: $font12
+
+        .separator
+            width: 86.11111111111111%
+            height: 1px
+            background-color: $gray
+            margin: auto
+            margin-top: $m16
+            margin-bottom: $m16
+
+        .lower-container
+            width: 86.11111111111111%
+            height: auto
+            display: flex
+            align-items: center
+            justify-content: space-between
+            margin: auto
+            margin-bottom: $m16
+
+            .text
+                color: $primary_gray
+                font-family: Lato
+                font-size: $font14
+                font-style: normal
+                font-weight: 400
+                line-height: 142.857%
+
+            .media
+                width: 5%
+                display: flex
+                align-items: center
+                justify-content: space-between
+
+                .social
+                    color: $secondary_text
+                    font-size: $font20
+
+    .logotypes
+        display: none !important
