--- a/src/pages/MainPage/styles/main_page.sass
+++ b/src/pages/MainPage/styles/main_page.sass
@@ -1,6 +1,6 @@
 @import "../../../styles/variables/variables"
 
-.spotlight-row
+.spotlight-row, .spotlight-row-pc
     display: none
 
 @media (min-width: 768px) and (max-width: 1024px)
@@ -121,10 +121,66 @@
 @media (min-width: 1024px)
 
     .spotlight-row
+        display: none
+
+    .spotlight-row-pc
         width: 90%
         display: flex
         flex-direction: row !important
         align-items: center
         justify-content: space-between
         margin: auto
-        margin-top: $m64tab !important
+        margin-top: $m64 !important
+        margin-bottom: $m64 !important
+
+    .advertisment-row-pc
+        width: 100%
+        background-color: #F7DDD0
+        display: flex !important
+        align-items: center
+        flex-direction: row
+        justify-content: space-between
+
+        .centered-container
+            width: 45%
+            display: flex
+            align-items: center
+            justify-content: space-between
+            margin: auto
+            margin-top: $m16
+            margin-bottom: $m16
+
+            .text-content
+                display: flex
+                flex-direction: column
+                align-items: flex-start
+
+                .ad-heading
+                    color: #465D6B
+                    font-family: Lato
+                    font-size: $font24
+                    font-style: normal
+                    font-weight: 700
+                    line-height: 83.333%
+                    letter-spacing: 0.5px
+                    text-transform: uppercase
+
+                .text
+                    width: 60%
+                    color: $secondary_text
+                    font-family: Lato
+                    font-size: $font20
+                    font-style: normal
+                    font-weight: 500
+                    line-height: 140%
+                    margin-top: $m16
+
+            .iphone-img
+                width: 300px
+                height: 100%
+
+        .left
+            margin-left: $m64
+
+        .right
+            margin-right: $m64
